k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solace-service
  labels:
    app: solace-service
    environment: base
